[package]
name = "signin"
version = "0.1.3"
authors = ["Boris Faure <boris@fau.re>"]
license = "BSD-2-Clause"
keywords = ["google", "sign-in", "jwt"]
readme = "README.md"
description = "Rust library to validate google-sign-in tokens"
repository = "https://github.com/billiob/signin"
documentation = "https://docs.rs/signin/"

[dependencies]
serde = "0.9"
serde_json = "~0.9.8"
serde_derive = "0.9"
base64 = "0.4"
time = "0.1"
openssl = "0.9"
