[package]
name = "signin"
version = "0.1.5"
authors = ["Boris Faure <boris@fau.re>"]
license = "BSD-2-Clause"
keywords = ["google", "sign-in", "jwt"]
readme = "README.md"
description = "Rust library to validate google-sign-in tokens"
repository = "https://github.com/billiob/signin"
documentation = "https://docs.rs/signin/"

[dependencies]
debug_macros = "0.0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.9"
time = "0.1"
openssl = "0.10"
